--- a/Task_02/MainWindow.xaml
+++ b/Task_02/MainWindow.xaml
@@ -1,14 +1,12 @@
-﻿<Window x:Class="Marathone_WPF_2J.MainWindow"
+﻿<Window x:Class="Task_02.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Marathone_WPF_2J"
+        xmlns:local="clr-namespace:Task_02"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Width="100" Height="100" Click="Button_Click" Background="Green"
-                Content="Push"/>
         
     </Grid>
 </Window>
